k8s/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: webapper
  name: webapper
spec:
  ports:
  - name: webservice
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: webapper
