k8s/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapper
  name: webapper
spec:
  ports:
  - name: webservice
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
  selector:
    app: webapper
status:
  loadBalancer: {}
