k8s/ingress.yml
---
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: webapper
  spec:
    rules:
    - host: webapper.poc.home.local
      http:
        paths:
        - backend:
            serviceName: webapper
            servicePort: 8080
          path: /webapper(/|$)(.*)
kind: List
